feat: add start command in the package and remove vercel file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "nodemon",
         "build": "tsc",
-        "start": "./build/server.js"
+        "start": "node build/src/server.js"
     },
     "prisma": {
         "seed": "ts-node ./prisma/seed.ts"
