--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "engines": {
+        "node": "20"
+    },
     "scripts": {
         "dev": "nodemon",
         "build": "tsc",
