--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "scripts": {
         "dev": "nodemon",
         "build": "tsc",
-        "start": "node build/src/server.js"
+        "start": "node build/src/server.js",
+        "vercel-build": "npx prisma migrate deploy && npx prisma generate"
     },
     "prisma": {
         "seed": "ts-node ./prisma/seed.ts"
