--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
         "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.10.3",
         "prisma": "^5.7.0",
         "ts-node": "^10.9.1"
